# Table_Tennis_Robot_with_Stage-Based_Reward

./: PingPong_Robot_Sim2Real_Connection.py  README.md  Read_trajectory_data.py
Models/only_stage_3_reward_model/: Only_stage_3.pth  only_stage_3_init.pth  only_stage_3_mu.pth  only_stage_3_obs_mean.pth  only_stage_3_obs_var.pth  only_stage_3_sigma.pth
Models/stage-based_reward_model/: stage-based_reward.pth  stage-based_reward_init.pth  stage-based_reward_mu.pth  stage-based_reward_obs_mean.pth  stage-based_reward_obs_var.pth  stage-based_reward_sigma.pth
Models/stage_1+2_reward_model/: stage_1+2_reward.pth
Models/stage_1_reward_model/: stage_1_reward.pth
Trajectory_Experiments/: Ball.csv  Duel_plus_Spin.csv  Duel_without_spin.CSV  Serve_plus_Spin.CSV  serve_without_spin.CSV
Trajectory_Experiments/All_Trajectories_in_Reality/: Duel_plus_Spin1.csv  Duel_plus_Spin10.csv  Duel_plus_Spin11.csv  Duel_plus_Spin12.csv  Duel_plus_Spin13.csv  Duel_plus_Spin14.csv  Duel_plus_Spin15.csv  Duel_plus_Spin16.csv  Duel_plus_Spin17.csv  Duel_plus_Spin2.csv  Duel_plus_Spin3.csv  Duel_plus_Spin4.csv  Duel_plus_Spin5.csv  Duel_plus_Spin6.csv  (+36 more)
urdf/PingPong_Robot_Sim2Real/: CMakeLists.txt  package.xml
urdf/PingPong_Robot_Sim2Real/config/: joint_names_PingPong_Robot_Sim2Real.yaml
urdf/PingPong_Robot_Sim2Real/launch/: display.launch  gazebo.launch
urdf/PingPong_Robot_Sim2Real/meshes/: Arm_Link_1.STL  Net.STL  PingPong_Table.STL
urdf/PingPong_Robot_Sim2Real/urdf/: PingPong_Ball.urdf  PingPong_Robot_Sim2Real.csv  PingPong_Robot_Sim2Real.urdf  PingPong_Robot_Sim2Real_6_dof.urdf
(+50 files in other folders)
